# ia-a3-grupo-1

./: .gitignore  ai_note.ipynb  pyproject.toml
