[tool.poetry]
name = "ia-a3-grupo-1"
version = "0.1.0"
description = ""
authors = ["Alexandre Bertuol <axdbertuol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
huggingface-hub = "^0.26.1"
python-dotenv = "^1.0.1"
torch = "^2.5.0"
datasets = "^3.0.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
transformers = "^4.46.0"
scikit-learn = "^1.5.2"
torchvision = "^0.20.0"
torchaudio = "^2.5.0"
accelerate = "^1.0.1"
wandb = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
